@@ -17,7 +17,8 @@ public class UsersDataHolder {
 	/**
 	 * Root World name this set of groups is associated with.
 	 */
-	private String name;
+	//private String name;
+	private WorldDataHolder dataSource;
 	private File usersFile;
 	private boolean haveUsersChanged = false;
 	private long timeStampUsers = 0;
@@ -32,20 +33,28 @@ public class UsersDataHolder {
 	 */
 	protected UsersDataHolder() {
 	}
+	
+	public void setDataSource(WorldDataHolder dataSource) {
+		this.dataSource = dataSource;
+		//push this data source to the users, so they pull the correct groups data.
+		for (User user : users.values())
+			user.setDataSource(this.dataSource);
+		
+	}
 
 	/**
 	 * @param worldName
 	 */
-	public void setWorldName(String worldName) {
-		this.name = worldName;
-	}
+	//public void setWorldName(String worldName) {
+	//	this.name = worldName;
+	//}
 	
 	/**
 	 * @return the name
 	 */
-	public String getWorldName() {
-		return this.name;
-	}
+	//public String getWorldName() {
+	//	return this.name;
+	//}
 
 	/**
 	 * @return the users
